convertedToMDAPI/objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>CertifiedSite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in Caller Verification Processes and controls other elements</inlineHelpText>
        <label>Certified Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISBTCompliant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the site is ISBT compliant</inlineHelpText>
        <label>ISBT Compliant</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>ApheresisCenter</fullName>
        <active>true</active>
        <description>Apheresis Center</description>
        <label>Apheresis Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>HCP</fullName>
        <active>true</active>
        <label>HCP</label>
    </recordTypes>
    <recordTypes>
        <fullName>InfusionCenter</fullName>
        <active>true</active>
        <description>Infusion Center</description>
        <label>Infusion Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plant</fullName>
        <active>true</active>
        <label>Plant</label>
    </recordTypes>
    <recordTypes>
        <fullName>PlantRouting</fullName>
        <active>true</active>
        <description>Groups different hubs for routing material to and from plants</description>
        <label>Plant Routing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site</fullName>
        <active>true</active>
        <description>Hospital</description>
        <label>Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Team</fullName>
        <active>true</active>
        <label>Team</label>
    </recordTypes>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>